schema/testdata/validation_attribute_unique_invalids_args/schema.keel
model Post {
  fields {
    title Text {
      @unique(arg)
    }
  }
}
