schema/testdata/errors/attribute_unique_invalids_args.keel
model Post {
    fields {
        //expect-error:20:32:E024:1 argument(s) provided to @unique but expected 0
        title Text @unique(arg)
    }
}
